# calc

./: .travis.yml  Addition.cpp  Addition.h  CMakeLists.txt  Division.cpp  Division.h  Exponentiation.cpp  Exponentiation.h  Expression.cpp  Expression.h  Float.cpp  Float.h  Integer.cpp  Integer.h  Logarithm.cpp  Logarithm.h  Method.cpp  Method.h  Multiplication.cpp  Multiplication.h  NumericalMenu.cpp  NumericalMenu.h  Parser.cpp  Parser.h  Prime.cpp  Prime.h  README.md  ShuntingYard.cpp  ShuntingYard.h  Subtraction.h  Utility.cpp  Utility.h  Variable.cpp  Variable.h  calc.cpp  tests.cpp
